# GeneticAlgorithm

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  MySpaceManager.h  README.md  SpaceManager.cpp  SpaceManager.h  deploy.yml  main.cpp
.github/workflows/: build.yml  deploy.yml  main.yml
GeneticAlgorithmCore/: Battle.cpp  Bot.cpp  Bot.h  Evolution.cpp  Evolution.h  Mutation.cpp  Scene.h  help.txt
GraphicsManager/include/: Object.h  ObjectsAttributes.h  Space.h  SpaceManager.h
GraphicsManager/src/: Object.cpp  ObjectsAttributes.cpp  Space.cpp  SpaceManager.cpp
Objects/: Background.cpp  Background.h  Button.cpp  Button.h  ConstantsInit.cpp  SceneDraft.h  SceneGraphic.cpp  SceneGraphic.h
Objects/include/: Background.h  Button.h  ButtonBest.h  ButtonNew.h  ButtonOld.h  SceneGraphic.h
Objects/src/: Background.cpp  Button.cpp  ButtonBest.cpp  ButtonNew.cpp  ConstantsInit.cpp  SceneGraphic.cpp
Resources/: b.txt
Resources/BotsData/: bots.txt
